<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:text="@string/angka1" />

        <EditText
            android:id="@+id/angka1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/angka1"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:text="@string/angka2"/>
        <EditText
            android:id="@+id/angka2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/angka2"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnTambah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnTambah"
                />
            <Button
                android:id="@+id/btnKurang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnKurang"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnKali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnKali"
                />
            <Button
                android:id="@+id/btnBagi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnBagi"
                />
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:text="@string/hasil"
            />
        <EditText
            android:id="@+id/hasil"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text=""
            />
    </LinearLayout>
</LinearLayout>